--- a/Pipfile
+++ b/Pipfile
@@ -4,18 +4,16 @@ verify_ssl = true
 name = "pypi"
 
 [packages]
-asgiref = "==3.7.2"
-certifi = "==2023.7.22"
+asgiref = "==3.8.1"
+certifi = "==2024.7.4"
 charset-normalizer = "==3.3.2"
-django = "==4.2.7"
-djangorestframework = "==3.14.0"
-idna = "==3.4"
-pytz = "==2023.3.post1"
-requests = "==2.31.0"
-sqlparse = "==0.4.4"
-urllib3 = "==2.1.0"
+django = "==5.0.7"
+djangorestframework = "==3.15.2"
+idna = "==3.7"
+pytz = "==2024.1"
+requests = "==2.32.3"
 
 [dev-packages]
 
 [requires]
-python_version = "3.11"
+python_version = "3.12"
